	       JSBML NEWS -- History of user-visible changes

======================================================================
Version 0.8-rc2 (xx-xx-2012)
======================================================================

* Bug Fixes:

  - JSBML could not write negative infinity into SBML files correctly.
  
  - Meike Aichele removed in TreeNodeChangeEvent the event spacialDimension, 
    because there is already a spatialDimension-event, which means 
    exactly the same and removed also in TreeNodeChangeEvent the events resource, kineticLaw 
    and listOfUnits, because they are nowhere called at this time
  
======================================================================
Version 0.8-rc1 (08-12-2011)
======================================================================

* New Features:

  
  - Where necessary, initDefaults has been complemented with an 
    additional method, for which the level/version combination can be
    directly specified, i.e., it is now possible for those elements to
    set their defaults as these would be for the specified 
    level/version combination.

  - A check for duplicate id and metaid has been implemented. The new
    interface UniqueNamedSBase as been added to tag all the elements 
    whose id is intended to be unique within one model.
        
  - When adding an element with undefined Level/Version combination
    or at least with undefined Version to an element whose L/V 
    configuration has been defined, JSBML now recursively updates this
    configuration for the child element. In case of differing L/V
    configurations an exception will be thrown on adding the element.

  - The SBMLReader now provides static methods to directly read SBML content
    from Files, InputStreams, or Strings. Thanks to Martin Gräßlin for this
    idea in tracker issue #3300433.

  - ASTNode has now a userObject attribute through which any 
    computation result or any additional information can be stored
    in the tree.  
  